--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Shotstack templates",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run clean && node index.js",
+    "clean": "rm -rf build && mkdir -p build"
   },
   "author": "",
   "license": "ISC",
