--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clean && node index.js",
-    "clean": "rm -rf build && mkdir -p build"
+    "build": "npm run clean; node index.js",
+    "clean": "rm -rf build; mkdir -p build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "shotstack-sdk": "0.0.18"
+    "shotstack-sdk": "0.0.19"
   }
 }
